CSS_advanced/styles/10-style.css
@import url(https://fonts.googleapis.com/css?family=Open+Sans|Raleway);

html {
    scroll-behavior: smooth;
    font-size: 62.5%;
}

.visually-hidden {
    display: none;
}

:root {
    --color-primary: #d73953;
    --color-black: #090909;
    --color-white: #ffffff;
    --color-light-grey: #f3f3f3;
    --color-dark-grey: #353535;
    --text-color: var(--color-black);

    --font-family-base: "Open Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
    --font-family-title: "Raleway", "Helvetica Neue", "Helvetica", "Arial", sans-serif;

    --font-size-small: 1.2rem;
    --font-size-medium: 1.6rem;
    --font-size-large: 1.8rem;
    --font-size-x-large: 2.3rem;
    --font-size-xx-large: 4.8rem;

    --font-weight-regular: 400;
    --font-weight-bold: 700;

    --line-height-small: 1.2;
    --line-height-base: 1.5;
    --line-height-big: 1.8;

    --section-header-align: center;
}

body,
a {
    color: var(--text-color);
}

.card-category {
    color: var(--color-primary);
}

.section-header {
    color: var(--section-header-align);
}

.section-tagline {
    color: var(--color-primary);
}

body {
    font-family: var(--font-family-base);
    font-size: var(--font-size-medium);
    font-weight: var(--font-weight-regular);
    line-height: var(--line-height-base)
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: var(--font-family-title);
    font-weight: var(--font-weight-bold);
}

a {
    text-decoration: none;
}

